# AbstractVM

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
includes/: Instruction.hpp  InstructionType.hpp  Utils.hpp  eOperandType.hpp
includes/IOperand/: IOperand.cpp  IOperand.hpp
includes/MyTypes/MyDouble/: MyDouble.cpp  MyDouble.hpp
includes/MyTypes/MyFloat/: MyFloat.cpp  MyFloat.hpp
includes/MyTypes/MyInt16/: MyInt16.cpp  MyInt16.hpp
includes/MyTypes/MyInt32/: MyInt32.cpp  MyInt32.hpp
includes/MyTypes/MyInt8/: MyInt8.cpp  MyInt8.hpp
src/: AbstractVM.cpp  Main.cpp
src/Factory/: Factory.cpp  Factory.hpp
src/Utils/: ErrorHandling.cpp  Help.cpp
src/VirtualMachine/: VirtualMachine.cpp  VirtualMachine.hpp
src/VirtualMachine/CPU/: CPU.cpp  CPU.hpp
src/VirtualMachine/IOInterface/: IOInterface.cpp  IOInterface.hpp
src/VirtualMachine/Memory/: Memory.cpp  Memory.hpp
src/eOperandType/: eOperandType.cpp
